2003-10-12 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b147

	* Change: Replace preg_matc with ereg

2003-10-11 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b146

	* Warning and Notice reduction.

	* Removed untrue "new in 1.4.1" message.

	* Added text and link to encourage Gallery admins to subscribe to
	  gallery-announce mailing list.

2003-10-11  Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b145

	* Fixed a security issue in the setup/index.php file, which could be
	  exploited maliciously to allow remote files to be included, leading
	  to code injection.

2003-10-11 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b144

	* Bug fix, where resize didn't work with netpbm.  Introduced in 
	  1.4.1-cvs-b131.

2003-10-10 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b143

	* Bugfix: Catch explode on empty explode (NetBSD has no locale commandd)

	* Change: Added workaround for non working locales (also NetBSD related)

2003-10-10 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b142
	
	* Change: Added title attribute to "up narrow", Changed text from "UP" to
		  "navigate up" and make it translateable.

	* Bugfix: Changed \" to &quot; in configdata.inc

2003-10-10 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b141

	* Bugfix: When user 'admin' already was there and user gave a new
		  password in config wizard this was not saved.
                  Bug introduced in 1.4.1-cvs-b110.

2003-10-10  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b140

	* Fixed a bug introduced by me where the admin password would never
	  save properly in the Config. Wizard, preventing any possibility of
	  logging in.

	* Some browsers automatically clear password fields, so revisiting Step
	  2 might inadvertently clear the previously entered values. The
	  Config. Wizard now caches the password data to prevent this.

2003-10-09 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b139
	
	* Removed one warning.

	* Replaces "&amp;" from lost password emails.
