@@ -1,3 +1,13 @@
+2003-10-12  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b148
+
+	* Fixed bug 819770: "Config wizard does not always detect Apache2 mod_rewrite"
+
+ 	* Fixed config versioning bug where versions have decimal values.  We
+          now quote the value in config.php at all times.
+
+        * Further improved security in the setup directory for Windows 
+ 	  installations.  
+
 2003-10-12 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b147
 
 	* Change: Replace preg_matc with ereg
